Añadiendo tema Dark y cambiando estilos.

--- a/src/app/pages/movie-details/movie-details.page.scss
+++ b/src/app/pages/movie-details/movie-details.page.scss
@@ -6,3 +6,9 @@
 .cardTitle{
 font-style: italic;
 }
+
+.font{
+    font-family: 'Bowlby One SC', cursive;
+    font-size: 1.2em;
+    text-shadow: 3px 2px 2px rgb(77, 76, 76);
+}
