--- a/src/app/pages/movie-details/movie-details.page.html
+++ b/src/app/pages/movie-details/movie-details.page.html
@@ -1,44 +1,47 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="movies"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center" *ngIf="movieDetail">{{movieDetail.title}}</ion-title>
+    <ion-title class="ion-text-center font" *ngIf="movieDetail">{{movieDetail.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen>
   <ion-card *ngIf="movieDetail">
-    <img  src="https://image.tmdb.org/t/p/w500/{{movieDetail.poster_path}}" />
-    <ion-card-header >
-      <ion-card-subtitle class="cardSubtitle" > <h5>Votos : {{movieDetail.vote_average}} </h5> <h5>{{movieDetail.release_date}}</h5></ion-card-subtitle>
-      <ion-card-title class="cardTitle" >"{{movieDetail.tagline}}"</ion-card-title>
+    <img src="https://image.tmdb.org/t/p/w500/{{movieDetail.poster_path}}" />
+    <ion-card-header>
+      <ion-card-subtitle class="cardSubtitle">
+        <h5>Estreno: {{movieDetail.release_date}}</h5>
+        <h5>Votos: {{movieDetail.vote_average}}/10 </h5>
+      </ion-card-subtitle>
+      <ion-card-title *ngIf="movieDetail.tagline" class="cardTitle">"{{movieDetail.tagline}}"</ion-card-title>
     </ion-card-header>
-    <ion-card-content >
+    <ion-card-content>
       {{movieDetail.overview}}
     </ion-card-content>
-    <ion-card-content >
+    <ion-card-content>
       <h2>Genero: </h2>
       <ion-item *ngFor="let genres of movieDetail.genres">
-        <ion-label >- {{genres.name}}</ion-label>
+        <ion-label>- {{genres.name}}</ion-label>
       </ion-item>
     </ion-card-content>
-    <ion-card-content  >
+    <ion-card-content>
       <h2>Idiomas: </h2>
       <ion-item *ngFor="let language of movieDetail.spoken_languages">
         <ion-label>- {{language.name}}</ion-label>
       </ion-item>
     </ion-card-content>
-    <ion-card-content >
+    <ion-card-content>
       <h2>Productores: </h2>
       <ion-item *ngFor="let production of movieDetail.production_companies">
-        <ion-label >- {{production.name}}</ion-label>
+        <ion-label>- {{production.name}}</ion-label>
       </ion-item>
     </ion-card-content>
-    <ion-card-content >
-      <h2>Filmada en : </h2>
+    <ion-card-content>
+      <h2>Filmada en: </h2>
       <ion-item *ngFor="let film of movieDetail.production_countries">
-        <ion-label >- {{film.name}}</ion-label>
+        <ion-label>- {{film.name}}</ion-label>
       </ion-item>
     </ion-card-content>
   </ion-card>
